@@ -24,5 +24,25 @@
 </div>
 </div>
 
+<roundcube:object name="preloader" images="
+    /images/icons/folders.png
+    /images/mail_footer.png
+    /images/taskicons.gif
+    /images/display/loading.gif
+    /images/pagenav.gif
+    /images/mail_toolbar.png
+    /images/searchfield.gif
+    /images/icons/glass_roll.png
+    /images/icons/reset.gif
+    /images/icons/attachment.png
+    /images/icons/dot.png
+    /images/icons/unread.png  
+
+    /images/abook_toolbar.png
+    /images/icons/glass.png
+    /images/icons/groupactions.png
+    /images/watermark.gif
+" />
+
 </body>
 </html>
